# flowfree-rl-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: benchmark_puzzles.csv  dqn_test.csv  dqn_train.csv  dqn_val.csv  puzzle_data.csv
notebooks/: colab_dqn_pipeline.ipynb
rl/env/: __init__.py  config.py  constants.py  curriculum.py  env.py  generate_traces_from_completion.py  mask.py  observation.py  state.py  trace.py  utils.py
rl/env/rewards/: __init__.py  base.py  completion.py  composite.py  constraints.py  potential.py
rl/env/trace_generation/: __init__.py  cli.py  config.py  grid_utils.py  io.py  path_builder.py  processor.py
rl/env/trace_generation/strategies/: __init__.py  base.py  blocked.py  longest.py  normal.py  one_at_time.py  one_distance.py
rl/env/trace_generation/tests/: __init__.py  test_grid_utils.py  test_path_builder.py  test_strategies.py
rl/solver/: __init__.py  constants.py  dataset.py  evaluate_holdout.py  observation.py  reward_settings.py  train_dqn.py  train_supervised.py  train_supervised_transformer.py
rl/solver/core/: __init__.py  config.py  constants.py  logging.py
rl/solver/data/: __init__.py  replay.py
rl/solver/policies/: __init__.py  backbone.py  policy.py  q_network.py
rl/solver/trainers/: __init__.py  dqn.py  dqn_compat.py  dqn_trainer.py
rl/solver/trainers/components/: __init__.py  curriculum_manager.py  logger.py  metrics_tracker.py  rollout_recorder.py
scripts/: eval_holdout_manual.sh  full_dqn_pipeline_env2.sh  render_holdout_rollouts.py  split_dqn_dataset.py  view_tensorboard.sh
(+8 files in other folders)
